hphp/test/quick/redeclared_method1.php.expectf

Fatal error: Access level to C::foo() must be public (as in interface I) in %s on line 5
